actualizo documento de swagger
