# docs/swagger.json
@@ -24,16 +24,7 @@
                 "summary": "Create Satellite",
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/satellite.SatelliteCreateResponse"
-                        },
-                        "headers": {
-                            "Token": {
-                                "type": "string",
-                                "description": "qwerty"
-                            }
-                        }
+                        "description": ""
                     },
                     "400": {
                         "description": ""
@@ -65,6 +56,35 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/topsecret.TopSecretResponse"
+                        }
+                    },
+                    "404": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": ""
+                    },
+                    "default": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/topsecret_split/:name": {
+            "get": {
+                "description": "get position and message of ship",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get Top Secret Split",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/topsecret.TopSecretResponse"
                         },
                         "headers": {
                             "Token": {
@@ -83,29 +103,34 @@
                         "description": ""
                     }
                 }
+            },
+            "post": {
+                "description": "Create SatelliteContact",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create Top Secret Split",
+                "responses": {
+                    "201": {
+                        "description": ""
+                    },
+                    "404": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": ""
+                    },
+                    "default": {
+                        "description": ""
+                    }
+                }
             }
         }
     },
     "definitions": {
-        "satellite.SatelliteCreateResponse": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string"
-                },
-                "position": {
-                    "type": "object",
-                    "properties": {
-                        "x": {
-                            "type": "number"
-                        },
-                        "y": {
-                            "type": "number"
-                        }
-                    }
-                }
-            }
-        },
         "topsecret.TopSecretResponse": {
             "type": "object",
             "properties": {
